<resources>
    <string name="app_name">MemeAppName</string>
    <string name="hello_hello">ку</string>
    <string name="hello_message1">Юный андройд-турист Владислав написал свою первую (вторую) приложуху</string>
    <string name="hello_message2.1">Ты (а кто еще) попал в число\nтестеров/юзеров</string>
    <string name="hello_message2.2">(будто у меня много друзей)</string>
    <string name="hello_message2.3">произведения моего разума</string>
    <string name="hello_message3">Добавлю сюда свайп, шобы было</string>
    <string name="hello_swipe">Свайпни вниз, что б продолжить</string>
    <string name="description1">Тебе будет необходимо составить из букв слово, определение которого ты увидишь</string>
    <string name="description2">Это задание на время, поэтому чем быстрее справишься, тем выше будешь в таблице лидеров</string>
    <string name="description3">Кто гуглит, тот жареная фасоль</string>
    <string name="description3.1">(посмотреть фото жареной фасоли можно\nтапнув по этому тексту)</string>
    <string name="description4">Если не закончишь задание, то результат всё равно будет записан</string>
    <string name="description5">P.S. в начале марта, я шел по улице и увидел машину, где "это" делают и удивился, что это слово пишется так (зачем там лишняя буква (дай бог здоровья этимологам)) и подумал, что устроить такое соревнование будем мемно</string>
    <string name="quit_massege">Чего желает мой повелитель (выйти) ?</string>
    <string name="btn_yes">Дела не ждут! (да)</string>
    <string name="btn_no">Я жажду служить! (нет)</string>
    <string name="description_btn">Начать задание</string>
    <string name="case_description">Как называется рентгенологическое исследование, заключающееся в фотографировании видимого изображения организма на флюоресцентном экране, которое образуется в результате прохождения рентгеновских лучей через тело (человека) и неравномерного поглощения органами и тканями организма. Это сдают в рентгенкабинете грудью прислоняясь к стеклу.\n\nВ сокращенном виде, созвучна со словом "Юшка"</string>
    <string name="case_try_again">Не верно. Попробуй ещё раз. Тик-так, тик-Так</string>
    <string name="finish_description">Правильно!\n\nОтвет был получен за</string>
    <string name="correct_answer">ЙЙЙЙЙЙЙЙЙЙЙЙ</string>
    <string name="name_text">Введи отображаемое имя</string>
    <string name="enter_name">Имя не может быть пустым, ну ёмаё</string>
    <string name="finish_button_leaderboard">Таблица результатов</string>
    <string name="finish_text_goodbye">спасиба дасвидания</string>
</resources>