<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Finish"
    android:background="#FFCCBC"
    android:orientation="vertical">

    <TextView
        android:id="@+id/finish_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish_description"
        android:textSize="50sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_marginTop="30sp"/>

    <TextView
        android:id="@+id/finish_test_result"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="50sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_marginTop="30sp"
        android:layout_below="@id/finish_text"/>

    <Button
        android:id="@+id/btn_leaderboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/finish_button_leaderboard"
        android:layout_above="@id/finish_goodbye"/>

    <TextView
        android:id="@+id/finish_goodbye"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:text="@string/finish_text_goodbye"
        android:layout_alignParentBottom="true"/>


</RelativeLayout>